--- a/SSFR_Movies/SSFR_Movies/App.xaml
+++ b/SSFR_Movies/SSFR_Movies/App.xaml
@@ -57,12 +57,13 @@
                 <Setter Property="HeightRequest" Value="300" />-->
             </Style>
             <!--  Style StackLayout under Card image AllMoviesMape  -->
-            <Style x:Key="StackUnderImageStyle" TargetType="StackLayout">
+            <Style x:Key="StackUnderImageStyle" TargetType="Frame">
                 <Setter Property="BackgroundColor" Value="#312D2D" />
+                <Setter Property="CornerRadius" Value="5" />
+                <Setter Property="Margin" Value="0,0,0,0" />
                 <!--<Setter Property="HeightRequest" Value="50" />-->
                 <!--<Setter Property="WidthRequest" Value="323" />-->
                 <Setter Property="HorizontalOptions" Value="FillAndExpand" />
-                <Setter Property="Orientation" Value="Vertical" />
             </Style>
             <!--  Style Movie Title Style  -->
             <Style x:Key="TitleStyle" TargetType="Label">
