--- a/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
@@ -31,7 +31,7 @@
                                 WidthRequest="533" />
 
                             <StackLayout
-                                AbsoluteLayout.LayoutBounds="0, 1, 1, 0.3"
+                                AbsoluteLayout.LayoutBounds="0, 1, 1, 0.4"
                                 AbsoluteLayout.LayoutFlags="All"
                                 BackgroundColor="#00103B"
                                 HorizontalOptions="FillAndExpand"
@@ -49,7 +49,8 @@
                                     <StackLayout
                                         Grid.Row="1"
                                         Grid.Column="0"
-                                        Margin="16,0,0,0"
+                                        Margin="16,0,8,0"
+                                        HorizontalOptions="Start"
                                         Orientation="Horizontal">
                                         <Image
                                             HeightRequest="35"
@@ -64,10 +65,12 @@
                                     </StackLayout>
 
                                     <StackLayout
-                                        Grid.Row="0"
+                                        Grid.Row="1"
                                         Grid.Column="1"
                                         Grid.ColumnSpan="2"
-                                        Orientation="Vertical">
+                                        HorizontalOptions="Center"
+                                        Orientation="Vertical"
+                                        VerticalOptions="Start">
                                         <Label
                                             Margin="20,0,0,0"
                                             FontAttributes="Bold"
@@ -80,6 +83,31 @@
                                             HorizontalTextAlignment="Center"
                                             Style="{StaticResource LabelsStyle}"
                                             Text="{Binding ReleaseDate, StringFormat='{0}'}" />
+                                    </StackLayout>
+
+                                    <StackLayout
+                                        Grid.Row="1"
+                                        Grid.Column="1"
+                                        Margin="0,5,16,8"
+                                        HorizontalOptions="Center"
+                                        Orientation="Horizontal"
+                                        VerticalOptions="End">
+                                        <StackLayout.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="PlayTrailer_Tapped" />
+                                        </StackLayout.GestureRecognizers>
+                                        <ffimage:CachedImage
+                                            HeightRequest="35"
+                                            Source="YoutubeBtn.png"
+                                            WidthRequest="35" />
+                                        <Label
+                                            Margin="5,0,0,0"
+                                            FontAttributes="Bold"
+                                            FontSize="Small"
+                                            HorizontalTextAlignment="Center"
+                                            LineBreakMode="NoWrap"
+                                            Text="Play Trailer"
+                                            TextColor="White"
+                                            VerticalTextAlignment="Center" />
                                     </StackLayout>
 
                                 </Grid>
@@ -102,6 +130,7 @@
                     <StackLayout BackgroundColor="#006FDE" HorizontalOptions="FillAndExpand">
                         <Label
                             Margin="16,5,0,0"
+                            FontAttributes="Bold"
                             FontSize="Large"
                             HorizontalOptions="Start"
                             Text="Synopsis"
@@ -109,7 +138,6 @@
                             VerticalOptions="Start" />
                         <Label
                             Margin="16,5,16,5"
-                            FontAttributes="Bold"
                             FontSize="Medium"
                             HorizontalTextAlignment="Start"
                             Style="{StaticResource LabelsStyle}"
